# yellow-taxis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  codecov.yml  config.toml  luigi-deps-tree.md  luigi.toml  pyproject.toml
.github/workflows/: luigi-deps-tree.yml  pre-commit.yml  pytest.yml
notebooks/: result_visualization.ipynb
notes/: surprises.md
src/yellow_taxis/: averaging_tasks.py  dataframe_utils.py  download_task.py  fetch.py  settings.py  task_utils.py
src/yellow_taxis/tasks/: averaging_tasks.py  download.py  download_task.py  monthly_averages.py  rolling_averages.py  run_all.py
tests/: test_dataframe_utils.py  test_fetch.py  test_settings.py  test_task_utils.py  test_tasks.py
tests/test_data/: available_datasets_2023-11-29.json  yellow_tripdata_2009-01_head_n10_for_testing.parquet  yellow_tripdata_2010-12_head_n10_for_testing.parquet  yellow_tripdata_2023-01_head_for_testing.parquet
