[project]
name = "yellow-taxis"
version = "0.1.0"
description = "Calculates average NYC yellow taxi trip lenghts (monthly and rolling)"
authors = [
    {name = "Michael Eliachevitch", email = "m.eliachevitch@posteo.de"},
]
dependencies = [
    "pandas>=2.1.3",
    "matplotlib>=3.8.2",
    "numpy>=1.26.2",
    "jupyterlab>=4.0.9",
    "rich>=13.7.0",
    "python-lsp-server[rope]>=1.9.0",
    "python-lsp-ruff>=2.0.0",
    "pylsp-mypy>=0.6.8",
    "jedi>=0.19.1",
    "pytest>=7.4.3",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# enable E (pycodestyle) and F (pyflakes) linting rules
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
