[project]
name = "yellow-taxis"
version = "0.1.0"
description = "Calculates average NYC yellow taxi trip lenghts (monthly and rolling)"
authors = [
    {name = "Michael Eliachevitch", email = "m.eliachevitch@posteo.de"},
]
dependencies = [
    "pandas>=2.1.3",
    "matplotlib>=3.8.2",
    "numpy>=1.26.2",
    "requests>=2.31.0",
    "validators>=0.22.0",
    "luigi[toml]>=3.4.0",
    "pathlib>=1.0.1",
    "fastparquet>=2023.10.1",
    "xdg-base-dirs>=6.0.1",
    "sqlalchemy>=2.0.23",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
# enable E (pycodestyle) and F (pyflakes) linting rules
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.isort]
profile = "black"  # black profile is compatible with ruff

[tool.mypy]
disable_error_code = "annotation-unchecked,import-untyped"

[tool.pdm.dev-dependencies]
dev = [
    "jedi>=0.19.1",
    "python-lsp-server>=1.9.0",
    "python-lsp-ruff>=2.0.0",
    "pylsp-mypy>=0.6.8",
    "docformatter[tomli]>=1.7.5",
]
test = [
    "pytest>=7.4.3",
    "pre-commit>=3.5.0",
    "pytest-md>=0.2.0",
    "codecov>=2.1.13",
    "pytest-cov>=4.1.0",
]
jupyter = [
    "nbqa[ruff]>=1.7.1",
    "jupyterlab>=4.0.9",
    "nbstripout>=0.6.1",
]
batch = [
    "b2luigi>=0.10.2",
]

[tool.pdm.scripts]
download-locally = {call = "yellow_taxis.tasks.download:run_locally"}
monthly-average-locally = {call = "yellow_taxis.tasks.monthly_averages:run_locally"}
rolling-average-locally = {call = "yellow_taxis.tasks.rolling_averages:run_locally"}
